// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders published correctly 1`] = `
<View
  accessibilityLabel="Published"
  style={
    Object {
      "alignItems": "center",
      "flex": 0,
      "height": 32,
      "width": 46,
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../src/images/kabob.png",
      }
    }
    style={
      Array [
        Object {
          "position": "absolute",
        },
        Object {
          "tintColor": "#fff",
        },
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderRadius": 8,
        "height": 16,
        "justifyContent": "center",
        "left": 20,
        "position": "absolute",
        "top": 10,
        "width": 16,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/images/Published.png",
        }
      }
      style={
        Object {
          "height": 12,
          "tintColor": "#00AC18",
          "width": 12,
        }
      }
    />
  </View>
</View>
`;

exports[`renders unpublished correctly 1`] = `
<View
  accessibilityLabel="Not Published"
  style={
    Object {
      "alignItems": "center",
      "flex": 0,
      "height": 32,
      "width": 46,
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../src/images/kabob.png",
      }
    }
    style={
      Array [
        Object {
          "position": "absolute",
        },
        Object {
          "tintColor": "#fff",
        },
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderRadius": 8,
        "height": 16,
        "justifyContent": "center",
        "left": 20,
        "position": "absolute",
        "top": 10,
        "width": 16,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/images/Unpublished.png",
        }
      }
      style={
        Object {
          "height": 12,
          "tintColor": "#8B969E",
          "width": 12,
        }
      }
    />
  </View>
</View>
`;
